Bug 1281428 - Don't skip paint painting SVG effects due to 0 opacity if the opacity is being handled by a separate item. r=jwatt